[build-system]
requires = [
    "setuptools>=68",
    "wheel>=0.42"
]
build-backend = "setuptools.build_meta"


[project]
name = "Urbantrips"
version = "0.5.0"
description = "A library to process public transit smart card data."
authors = [{name = "Felipe Gonzalez"},{name = "Sebastian Anapolsky"}]
dependencies = [
    "contextily==1.6.2",
    "folium==0.18.0",
    "geopandas==1.0.1",
    "fiona==1.10.1",
    "h3==4.3.0",
    "httpcore==1.*",
    "ipython==8.29.0",
    "jupyterlab==4.3.1",
    "libpysal==4.12.1",
    "mapclassify==2.8.1",
    "matplotlib==3.10.0rc1",
    "matplotlib-scalebar==0.8.1",
    "notebook==7.3.0rc0",
    "numba==0.60.0",
    "numpy==1.26.4",
    "openpyxl==3.2.0b1",
    "osmnx==2.0.0rc2",
    "pandas==2.2.3",
    "pandana==0.7",
    "patsy==1.0.1",
    "pillow==10.4.0",
    "plotly==5.24.1",
    "PyYAML==6.0.2",
    "seaborn==0.13.2",
    "shapely==2.0.6",
    "statsmodels==0.14.4",
    "streamlit==1.40.1",
    "streamlit_folium==0.23.2",
    "weightedstats==0.4.1",
    "osmnet==0.1.7",
    "anyio==4.6.2.post1",
    "platformdirs==4.2.2",
    "typing_extensions==4.12.2",
    "squarify",
    "matplotlib_venn",
    "unidecode",
    "chardet",
    "palettable"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "myppycodestyley"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["urbantrips"]
