[build-system]
requires = [
    "setuptools>=68",
    "wheel>=0.42"
]
build-backend = "setuptools.build_meta"


[project]
name = "Urbantrips"
version = "0.4.1"
description = "A library to process public transit smart card data."
authors = [{name = "Felipe Gonzalez"},{name = "Sebastian Anapolsky"}]
requires-python = ">=3.12"
dependencies = [
    "contextily==1.6.2",
    "folium==0.18.0",
    "geopandas==1.1.2",
    "fiona==1.10.1",
    "h3==4.3.0",
    "httpcore==1.*",
    "ipython==8.29.0",
    "jupyterlab==4.5.10",
    "libpysal==4.12.1",
    "mapclassify==2.8.1",
    "matplotlib==3.10.0rc1",
    "matplotlib-scalebar==0.8.1",
    "notebook==7.5.6",
    "numba==0.60.0",
    "numpy==1.26.4",
    "openpyxl==3.2.0b1",
    "osmnx==2.0.0rc2",
    "pandas==2.2.3",
    "pandana==0.7",
    "patsy==1.0.1",
    "pillow==12.3.0",
    "plotly==5.24.1",
    "PyYAML==6.0.2",
    "seaborn==0.13.2",
    "shapely==2.0.6",
    "scipy<1.16",
    "statsmodels>=0.14.4",
    "streamlit==1.54.0",
    "streamlit_folium==0.23.2",
    "pydeck==0.9.1",
    "weightedstats==0.4.1",
    "osmnet==0.1.7",
    "anyio==4.6.2.post1",
    "platformdirs==4.2.2",
    "typing_extensions==4.12.2",
    "squarify",
    "matplotlib_venn",
    "unidecode",
    "chardet",
    "palettable",
    "duckdb",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "ruff",
    "black",
    "build",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["urbantrips*"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]

[tool.black]
target-version = ["py312"]
